main branch updated code

--- a/app.json
+++ b/app.json
@@ -2,3 +2,6 @@
 	"name": "suniyenetajee",
 	"displayName": "SuniyeNetaJee"
 }
+// "react-native-google-mobile-ads": {
+// 	"android_app_id": "ca-app-pub-8153576310820784~5477355942"
+// }
