--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@freakycoder/react-native-bounceable": "^1.0.3",
 		"@react-native-async-storage/async-storage": "^1.23.1",
 		"@react-native-community/netinfo": "^11.3.2",
+		"@react-native-firebase/app": "^20.3.0",
 		"@react-native-picker/picker": "^2.7.7",
 		"@react-navigation/bottom-tabs": "^6.5.20",
 		"@react-navigation/drawer": "^6.6.15",
@@ -29,6 +30,7 @@
 		"react-native-animatable": "^1.4.0",
 		"react-native-btr": "^2.2.1",
 		"react-native-date-picker": "^5.0.4",
+		"react-native-google-mobile-ads": "^14.2.1",
 		"react-native-image-crop-picker": "^0.41.1",
 		"react-native-image-picker": "^7.1.2",
 		"react-native-image-viewing": "^0.2.2",
